infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec: 
      containers:
        - name: comments
          image: ketanrtd1/comments # push this image to docker hub to access it
---

apiVersion: v1
kind: Service
metadata:
  name: comments-srv # This is the name that is going to used by others to refer this depl or pods or containers of it.
spec:
  selector:
    app: comments # name of the app where we want to redirect to or expose to other
  type: ClusterIP # optional by default kubernetes will make it clusterip
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
