infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: 
    app: posts # service for posts, which pods to expose , just like class names 
  ports:  # all the ports to set on the target port
    - name: posts # here name can be anything just for logging purposes
      protocol: TCP
      port: 4000
      targetPort: 4000 #that's where we ultimately want to send traffic
